docs: add swagger ui authorization header to requests