@@ -1,13 +1,23 @@
 package dev.chijiokeibekwe.librarymanagementsystem.config;
 
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import io.swagger.v3.oas.models.Components;
 import io.swagger.v3.oas.models.OpenAPI;
+import io.swagger.v3.oas.models.Operation;
 import io.swagger.v3.oas.models.info.Contact;
 import io.swagger.v3.oas.models.info.Info;
+import io.swagger.v3.oas.models.media.StringSchema;
+import io.swagger.v3.oas.models.parameters.Parameter;
+import io.swagger.v3.oas.models.security.SecurityRequirement;
+import io.swagger.v3.oas.models.security.SecurityScheme;
 import io.swagger.v3.oas.models.servers.Server;
+import org.springdoc.core.customizers.OperationCustomizer;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.web.method.HandlerMethod;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -33,6 +43,11 @@ public class OpenAPIConfig {
                         .description("APIs exposing the endpoints to the library management backend service")
                         .contact(contact)
                 )
-                .servers(List.of(server));
+                .servers(List.of(server))
+                .components(new Components().addSecuritySchemes("bearer-token",
+                        new SecurityScheme().type(SecurityScheme.Type.HTTP).scheme("bearer").bearerFormat("JWT")
+                                .in(SecurityScheme.In.HEADER).name("Authorization")))
+                .addSecurityItem(
+                        new SecurityRequirement().addList("bearer-token", Arrays.asList("read", "write")));
     }
 }
